Changes for SQL::Translator

1.60 - 2019-05-29
 * No changes since 1.59_01

1.59_01 - 2019-04-28
 * Add support for parsing PostgreSQL dollar-quoted strings
 * Add support for materialized views in Oracle producer
 * switched JSON backend from JSON.pm to JSON::MaybeXS
 * Port Makefile.PL from Module::Install to Distar
 * Synchronise the version number across all modules

0.11024 2018-01-09

 * Remove temporary diagnostics added in 0.11023_01

0.11023_02 2017-12-08

 * Make maybe_plan skip on unrecognised failures to load modules

0.11023_01 2017-12-07

 * Add diagnostics to t/postgresql-rename-table-and-field.t that's
   failing mysteriously on some smokers

0.11023 2017-12-05

 * Fix error handling for Test::PostgreSQL 1.20

0.11022 2017-12-04

 * Add support for monotonically increasing SQLite autoincs (GH#47)
 * Add support for CHECK constraint in SQLite producer (GH#57)
 * Add support for CHECK constraint in POD producer (GH#63)
 * Fix forgotten quoting in the MySQL DROP TABLE diff producer (GH#50)
 * Fix Pg grammar parsing of UUID, time, timetz columns (RT#100196, GH#52)
 * Add support for USING and WHERE on indexes in PostgreSQL producer
   and parser (RT#63814, GH#52)
 * Improve add_trigger consistency between producers (GH#48)
 * Add trigger 'scope' attribute support to JSON, YAML and XML producers,
   and XML and SQLite parsers (RT#119997)
 * Declare dependencies in deterministic order (RT#102859)
 * Multiple speedups of naive internal debugging mechanism (GH#54)
 * Remove dependency on List::MoreUtils ( http://is.gd/lmu_cac_debacle )
 * Fix parsing of strings with leading whitespace for MySQL, Oracle, PostgreSQL,
   SQLServer and SQLite
 * Fix parsing of MySQL column comments (RT#83380)
 * Fix multi-line comments in YAML, JSON and PostgreSQL producers
 * Fix identifier quoting in PostgreSQL diff producer
 * Fix incorrect type conversion from various BigInt AutoIncrement to the
   PostgreSQL-specific bigserial (GH#72)